# UTClib

./: .gitignore  DISCLAIMER  README.md  pyproject.toml
docs/: template.tfex  template_2_prop
docs/tfex/: README.md
src/utclib/: converters.py  main.py  plot.py  pycggtts.py  tabarray.py  taiseconds.py  tfex.py  tfexhdr.py  tfexio.py
tests/unit/: test_hdr.py  test_taiseconds.py  test_tfex.py
tests/unit/test_data/: input.tfex
